2005-10-02  Richard Hult  <richard@imendio.com>

	* src/Makefile.am: Add commandhandler includes.

	* src/dh-gecko-utils.cpp:
	* src/dh-html.c: (dh_html_copy_selection):
	* src/dh-window.c: (window_activate_copy):
	* ui/window.ui: Add copy command and hook up in the UI, bug
	#120522.

2005-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-gecko-utils.cpp (dh_gecko_utils_get_mouse_event_button):
	Clean up.
	
	(dh_gecko_utils_get_mouse_event_modifiers): Add to get the
	modifier keys for the mouse event.

	* src/dh-html.c (html_mouse_click_cb): Ctrl-click opens in new tab.

	* src/dh-gecko-utils.cpp (dh_gecko_utils_get_mouse_event_button):
	Use the right integer type when getting the button, and remove the
	PPC hack, that most most likely caused by endian problems before.

2005-10-02  Mikael Hallendal  <micke@imendio.com>

	* src/dh-window.c: (window_open_new_tab):
	- Select the new tab so you can start using it directly.

2005-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (window_key_press_event_cb): Escape minimizes,
	not higgy but very convenient when using as a complent to
	Emacs/vim.

	* src/dh-base.c: (dh_base_new_window): Don't show the window here.

	* ui/window.ui:
	* src/dh-gecko-utils.cpp:
	* src/dh-html.c:
	* src/dh-window.c: Add support for tabs. Based on patch from Brent
	Smith, bug #154248.
	- Remove externs from libdevhelp referrering to the devhelp
	binary.

2005-10-01  Richard Hult  <richard@imendio.com>

	* acinclude.m4:
	* configure.in:
	* src/Makefile.am: Reorganize a bit so that we can use compiler
	warnings better suited for C (split out the C++ part in a separate
	static library). Clean up the dependencies.

	* src/dh-base.c: Clean up a bit, initiaize gecko here instead of
	in main(). Use glib to read the directory list instead of gnomevfs
	and don't duplicate the code to read gzipped devhelp files.

	* src/dh-html.c: Remove unused includes.

	* src/dh-main.c: Don't initialize gecko here, remove unused